[gd_scene load_steps=3 format=3 uid="uid://c5msgoyanhmja"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_hx1no"]
[ext_resource type="PackedScene" uid="uid://7pmsl7212rpm" path="res://Card/card.tscn" id="2_j3i4p"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hx1no")
cardScene = ExtResource("2_j3i4p")

[node name="DrawButton" type="Button" parent="."]
offset_left = 80.0
offset_top = 24.0
offset_right = 130.0
offset_bottom = 55.0
text = "Draw"

[node name="Card" type="Sprite2D" parent="."]
position = Vector2(32, 112)
centered = false

[node name="Hand" type="Node2D" parent="."]
position = Vector2(32, 112)

[node name="Hand value" type="Label" parent="."]
offset_left = 136.0
offset_top = 28.0
offset_right = 176.0
offset_bottom = 51.0

[node name="ResetButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 75.0
offset_bottom = 55.0
text = "Reset"

[connection signal="pressed" from="DrawButton" to="." method="_on_draw_card_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
